force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <label>Admission</label>
    <nameField>
        <label>Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>