force-app/main/default/objects/Admission__c/fields/Admission_No__c.field-meta.xml
<CustomField>
    <fullName>Admission_No__c</fullName>
    <label>Admission No</label>
    <type>AutoNumber</type>
</CustomField>