force-app/main/default/objects/Admission__c/validationRules/Admission_Date_cannot_be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Admission_Date_cannot_be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Admission_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Admission Date cannot be future.</errorMessage>
</ValidationRule>