force-app/main/default/objects/Admission__c/validationRules/Cannot_Approve_without_Documents.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Approve_without_Documents</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Approved&quot;),
NOT(Documents_Verified__c)
)</errorConditionFormula>
    <errorMessage>Verify documents before approval.</errorMessage>
</ValidationRule>