force-app/main/default/objects/Admission__c/validationRules/Department_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Department__c))</errorConditionFormula>
    <errorMessage>Select Department.</errorMessage>
</ValidationRule>